Fixed error in page having horizontal scroll

--- a/noredio/frontend/static/frontend/style.css
+++ b/noredio/frontend/static/frontend/style.css
@@ -90,7 +90,7 @@ nav {
 }
 
 .home-main {
-    min-width: 100vw;
+    min-width: 100%;
     position: relative;
     text-align: center;
 }
